--- a/src/css/base.css
+++ b/src/css/base.css
@@ -78,6 +78,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 /* Scrollbar Styles */
